--- a/about_us.html
+++ b/about_us.html
@@ -61,7 +61,7 @@
             
           </div>
               <p>&copy; 2024 Department of Computer and Communication Engineering, NMAMIT, Nitte. </p>
-              <p>All rights reserved !!!</p>
+              <p>Made with ❤️ by <a href="developers.html">Developer Team</a></p>
     </footer>
 </body>
 </html>
