--- a/index.html
+++ b/index.html
@@ -77,10 +77,6 @@
 
         <!-- Footer -->
         <footer>
-            <!-- Social media  -->
-
-      <div class="hero">
-        <!-- <button id="darkModeToggle">🌙 Dark Mode</button> -->
 
         <div class="social-links">
             <a href="https://www.instagram.com/access.nmamit" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -89,7 +85,7 @@
         
       </div>
           <p>&copy; 2024 Department of Computer and Communication Engineering, NMAMIT, Nitte. </p>
-          <p>All rights reserved !!!</p>
+          <p>Made with ❤️ by <a href="developers.html">Developer Team</a></p>
       </footer>
   </div>
   
